Fix before footer spacing

--- a/postcss/footer.pcss
+++ b/postcss/footer.pcss
@@ -70,9 +70,9 @@
 }
 
 .before-footer .large-9 {
-	flex: 70%;
+	flex: 75%;
 }
 
 .before-footer .large-3 {
-	flex: 25%;
+	flex: 20%;
 }
